# overseerr-auto-request

./: .env.schema  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  compose.yaml  flake.nix  justfile  overseerr-auto-request.cabal  overseerr-auto-requester.cabal  shell.nix
.github/workflows/: build.yml  publish.yml
app/: Main.hs
app/lib/: Env.hs  Util.hs
src/: HttpSink.hs  Main.hs
src/Lib/: Env.hs  Util.hs
src/Lib/Overseerr/: Models.hs  Service.hs
src/lib/: Env.hs  Http.hs
src/lib/overseerr/: Models.hs  Service.hs
