cabal-version:          3.0
name:                   overseerr-auto-request
version:                0.1.0.0
synopsis:               Automatically request TV shows or movies on Overseerr.
license:                MIT
license-file:           LICENSE
author:                 imatpot
maintainer:             root@brankovic.dev
category:               Web
build-type:             Simple
extra-doc-files:        CHANGELOG.md

common common-properties
    hs-source-dirs:     src
    default-language:   Haskell2010
    ghc-options:        -Wall

executable overseerr-auto-request
    import:             common-properties
    main-is:            Main.hs
    build-depends:      base ^>=4.18,
                        split ^>=0.2,
                        dotenv ^>=0.11,
                        case-insensitive ^>=1.2,
                        bytestring ^>=0.11,
                        http-client ^>=0.7,
                        http-client-tls ^>=0.3,
                        http-conduit ^>=2.3,
                        aeson ^>=2.1,
    other-modules:      Lib.Util,
                        Lib.Env,
                        Lib.Http,
                        Lib.Overseerr.Models,
                        Lib.Overseerr.Service,

executable http-sink
    import:             common-properties
    main-is:            HttpSink.hs
    build-depends:      base ^>=4.18,
                        http-types ^>=0.12,
                        wai ^>=3.2,
                        warp ^>=3.3,
