cabal-version:          3.0
name:                   overseerr-auto-requester
version:                0.1.0.0
synopsis:               Automatically request TV shows or movies on Overseerr.
license:                MIT
license-file:           LICENSE
author:                 imatpot
maintainer:             root@brankovic.dev
category:               Web
build-type:             Simple
extra-doc-files:        CHANGELOG.md

common common-properties
    hs-source-dirs:     src
    default-language:   Haskell2010
    ghc-options:        -Wall

executable overseerr-auto-requester
    import:             common-properties
    main-is:            Main.hs
    build-depends:      base ^>=4.18,
                        split ^>=0.2,
                        dotenv ^>=0.12,
                        case-insensitive ^>=1.2,
                        bytestring ^>=0.12,
                        http-conduit ^>=2.3,
                        aeson ^>=2.2,
    other-modules:      Lib.Util,
                        Lib.Env,
                        Lib.Http,
                        Lib.Overseerr.Models,

executable http-sink
    import:             common-properties
    main-is:            HttpSink.hs
    build-depends:      base ^>=4.18,
                        http-types ^>=0.12,
                        wai ^>=3.2,
                        warp ^>=3.4,
